Add h1, h2, h3 color styles and add dummy text to paragraphs

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <h1>Tristan Emmerson's Programming Portfolio</h1>
+    <h2>heading 2 spot</h2>
+    <p>Lorem ipsum dolor sit amet, eu ius agam tota graeco. Usu an lobortis facilisis, at quot ferri graeco nam. Affert volutpat referrentur vim eu, odio nobis molestie cu eum, malorum alterum saperet ad qui. Nullam expetendis in sit, in mel aliquando cotidieque, et virtute disputando intellegebat eum. Lorem ipsum dolor sit amet, partem omnesque voluptatum id his. Possit nemore assueverit eum ei, sit congue eripuit id, ei cum appareat elaboraret. Quidam dignissim et quo, epicurei neglegentur est et. Porro zril antiopam vel cu, vel at etiam regione corrumpit.</p>
 
-    <p>Page content</p>
+    <h2>heading 1 spot b</h2>
+    <p>Lorem ipsum dolor sit amet, eu ius agam tota graeco. Usu an lobortis facilisis, at quot ferri graeco nam. Affert volutpat referrentur vim eu, odio nobis molestie cu eum, malorum alterum saperet ad qui. Nullam expetendis in sit, in mel aliquando cotidieque, et virtute disputando intellegebat eum. Lorem ipsum dolor sit amet, no nec verterem hendrerit definitionem, ex usu dolor adolescens. Eos eu magna fugit reprehendunt. Idque iusto nostro ius id. Ne debitis moderatius nec, nobis quando inermis eos at, eu quo exerci ignota assueverit. Id quis quod case sed, prima reprimique an eos, quod quot ei eos.</p>
+    
   </body>
 </html>
