Added row column element containers for project information. Add span style to a panel.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,32 @@
 
     <h2>heading 1 spot b</h2>
     <p>Affert volutpat <em>reuuteropper idio alterum</em> referrentur vim eu, odio nobis<a href="#"> Nullam alugiot en gippo truip cintrolo up up</a> molestie cu eum, malorum alterum saperet ad qui. Nullam expetendis in sit, in mel aliquando cotidieque, et virtute disputando intellegebat eum. Lorem ipsum dolor sit amet, no nec verterem hendrerit definitionem, ex usu dolor adolescens. Eos eu magna fugit reprehendunt. Idque iusto nostro ius id. Ne debitis moderatius nec, nobis quando inermis eos at, eu quo exerci ignota assueverit. Id quis quod case sed, prima reprimique an eos, quod quot ei eos.</p>
+    <div class="col-md-4">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Git and GitHub</h2>
+            </div>
+              <div class="panel-body">
+                <ul>
+                <li>Initializing local Git repository, and create remote GitHub repositories.</li>
+                <li>Tracking and committing changes with Git.</li>
+                <li>Pushing a local Git repository to a remote GitHub repository.</li>
+                <li>Branching a project to make multiple copies.</li>
+                <li>Merging multiple Git branches back together.</li>
+                <li>Cloning down a project from GitHub to my local machine.</li>
+                <li class="bg-success">Publishing a website on GitHub pages.</li>
+              </ul>
+        </div>
+      </div>
+    </div>
     
+      <div class="col-md-4">
+        <h2>Partnering</h2>
+        <blockquote class="bg-info">
+          <p>"It's been really good working with you!"</p>
+          <footer>My partner the first day</footer>
+        </blockquote>
+      </div>
+    </div>
   </body>
 </html>
