Add additional containers to hold repo/project information for portfolio.

--- a/index.html
+++ b/index.html
@@ -16,27 +16,173 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Git and GitHub</h2>
+          <h2 class="panel-title">first</h2>
             </div>
               <div class="panel-body">
                 <ul>
-                <li>Initializing local Git repository, and create remote GitHub repositories.</li>
-                <li>Tracking and committing changes with Git.</li>
-                <li>Pushing a local Git repository to a remote GitHub repository.</li>
-                <li>Branching a project to make multiple copies.</li>
-                <li>Merging multiple Git branches back together.</li>
-                <li>Cloning down a project from GitHub to my local machine.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li class="bg-danger">Publishing a website on GitHub pages.</li>
+              </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">second</h2>
+            </div>
+              <div class="panel-body">
+                <ul>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <span style="color:blue;font-weight:bold"><li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li></span>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li class="bg-warning">Publishing a website on GitHub pages.</li>
+              </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">third</h2>
+            </div>
+              <div class="panel-body">
+                <ul>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li class="bg-success">Publishing a website on GitHub pages.</li>
               </ul>
         </div>
       </div>
     </div>
-    
+
+    <div class="col-md-4">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">first</h2>
+            </div>
+              <div class="panel-body">
+                <ul>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li class="bg-danger">Publishing a website on GitHub pages.</li>
+              </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">second</h2>
+            </div>
+              <div class="panel-body">
+                <ul>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <span style="color:blue;font-weight:bold"><li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li></span>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li class="bg-warning">Publishing a website on GitHub pages.</li>
+              </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">third</h2>
+            </div>
+              <div class="panel-body">
+                <ul>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li class="bg-success">Publishing a website on GitHub pages.</li>
+              </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">first</h2>
+            </div>
+              <div class="panel-body">
+                <ul>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li class="bg-danger">Publishing a website on GitHub pages.</li>
+              </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">second</h2>
+            </div>
+              <div class="panel-body">
+                <ul>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <span style="color:blue;font-weight:bold"><li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li></span>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li class="bg-warning">Publishing a website on GitHub pages.</li>
+              </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">third</h2>
+            </div>
+              <div class="panel-body">
+                <ul>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
+                <li class="bg-success">Publishing a website on GitHub pages.</li>
+              </ul>
+        </div>
+      </div>
+    </div>
+
       <div class="col-md-4">
         <h2>Partnering</h2>
         <blockquote class="bg-info">
-          <p>"It's been really good working with you!"</p>
-          <footer>My partner the first day</footer>
+          <p>"Lorem nisl en cuitl nopoo ditit eius"</p>
+          <footer>quote origin</footer>
         </blockquote>
       </div>
     </div>
