--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li class="bg-danger">Publishing a website on GitHub pages.</li>
+                <a href="#" <li class="bg-danger">Publishing a website on GitHub pages.</li></a>
               </ul>
         </div>
       </div>
@@ -44,7 +44,7 @@
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li class="bg-warning">Publishing a website on GitHub pages.</li>
+                <a href="#" <li class="bg-warning">Publishing a website on GitHub pages.</li></a>
               </ul>
         </div>
       </div>
@@ -62,7 +62,7 @@
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li class="bg-success">Publishing a website on GitHub pages.</li>
+                <a href="#" <li class="bg-success">Publishing a website on GitHub pages.</li></a>
               </ul>
         </div>
       </div>
@@ -71,7 +71,7 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">first</h2>
+          <h2 class="panel-title">fourth</h2>
             </div>
               <div class="panel-body">
                 <ul>
@@ -81,7 +81,7 @@
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li class="bg-danger">Publishing a website on GitHub pages.</li>
+                <a href="#" <li class="bg-danger">Publishing a website on GitHub pages.</li></a>
               </ul>
         </div>
       </div>
@@ -89,7 +89,7 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">second</h2>
+          <h2 class="panel-title">fifth</h2>
             </div>
               <div class="panel-body">
                 <ul>
@@ -99,7 +99,7 @@
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li class="bg-warning">Publishing a website on GitHub pages.</li>
+                <a href="#" <li class="bg-warning">Publishing a website on GitHub pages.</li></a>
               </ul>
         </div>
       </div>
@@ -107,7 +107,7 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">third</h2>
+          <h2 class="panel-title">sixth</h2>
             </div>
               <div class="panel-body">
                 <ul>
@@ -117,7 +117,7 @@
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li class="bg-success">Publishing a website on GitHub pages.</li>
+                <a href="#" <li class="bg-success">Publishing a website on GitHub pages.</li></a>
               </ul>
         </div>
       </div>
@@ -126,7 +126,7 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">first</h2>
+          <h2 class="panel-title">seventh</h2>
             </div>
               <div class="panel-body">
                 <ul>
@@ -136,7 +136,7 @@
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li class="bg-danger">Publishing a website on GitHub pages.</li>
+                <a href="#" <li class="bg-danger">Publishing a website on GitHub pages.</li></a>
               </ul>
         </div>
       </div>
@@ -144,7 +144,7 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">second</h2>
+          <h2 class="panel-title">eighth</h2>
             </div>
               <div class="panel-body">
                 <ul>
@@ -154,7 +154,7 @@
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li class="bg-warning">Publishing a website on GitHub pages.</li>
+                <a href="#" <li class="bg-warning">Publishing a website on GitHub pages.</li></a>
               </ul>
         </div>
       </div>
@@ -162,7 +162,7 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">third</h2>
+          <h2 class="panel-title">ninth</h2>
             </div>
               <div class="panel-body">
                 <ul>
@@ -172,7 +172,7 @@
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
                 <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li class="bg-success">Publishing a website on GitHub pages.</li>
+                <a href="#" <li class="bg-success">Publishing a website on GitHub pages.</li></a>
               </ul>
         </div>
       </div>
