Clean up formatting and extraneous coding.

--- a/index.html
+++ b/index.html
@@ -11,58 +11,21 @@
     <h2>heading 2 spot</h2>
     <p>Lorem ipsum dolor sit amet, eu ius agam tota graeco. Usu an lobortis <strong><a href="#">Alterum ius Gracecco</a></strong> facilisis, at quot ferri graeco nam. Affert <strong>malorum voltropit at quot cu eum </strong>volutpat referrentur vim eu, odio nobis molestie cu eum, malorum alterum saperet ad qui. Nullam expetendis in sit, in mel aliquando cotidieque, et virtute disputando intellegebat eum. Lorem ipsum dolor sit amet, partem omnesque voluptatum id his. Possit nemore assueverit eum ei, sit congue eripuit id, ei cum appareat elaboraret. Quidam dignissim et quo, epicurei neglegentur est et. Porro zril antiopam vel cu, vel at etiam regione corrumpit.</p>
 
-    <h2>heading 1 spot b</h2>
-    <p>Affert volutpat <em>reuuteropper idio alterum</em> referrentur vim eu, odio nobis<a href="#"> Nullam alugiot en gippo truip cintrolo up up</a> molestie cu eum, malorum alterum saperet ad qui. Nullam expetendis in sit, in mel aliquando cotidieque, et virtute disputando intellegebat eum. Lorem ipsum dolor sit amet, no nec verterem hendrerit definitionem, ex usu dolor adolescens. Eos eu magna fugit reprehendunt. Idque iusto nostro ius id. Ne debitis moderatius nec, nobis quando inermis eos at, eu quo exerci ignota assueverit. Id quis quod case sed, prima reprimique an eos, quod quot ei eos.</p>
+    <h2><strong>Epicodus</strong> Portfolio Projects</h2>
+    <br>
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">first</h2>
+          <h2 class="panel-title">Branching Project</h2>
             </div>
               <div class="panel-body">
+                <em><h4>Concepts</h4></em>
                 <ul>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <a href="#" <li class="bg-danger">Publishing a website on GitHub pages.</li></a>
-              </ul>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <h2 class="panel-title">second</h2>
-            </div>
-              <div class="panel-body">
-                <ul>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <span style="color:blue;font-weight:bold"><li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li></span>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <a href="#" <li class="bg-warning">Publishing a website on GitHub pages.</li></a>
-              </ul>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <h2 class="panel-title">third</h2>
-            </div>
-              <div class="panel-body">
-                <ul>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <a href="#" <li class="bg-success">Publishing a website on GitHub pages.</li></a>
+                <li>#</li>
+                <li>#</li>
+                <li>#</li>
+                <br>
+                <a href="https://github.com/tmemmerson/branching-test-project.git" <li class="bg-danger">see more...</li></a>
               </ul>
         </div>
       </div>
@@ -71,53 +34,16 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">fourth</h2>
+          <h2 class="panel-title">First Webpage</h2>
             </div>
               <div class="panel-body">
+                <em><h4>Concepts</h4></em>
                 <ul>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <a href="#" <li class="bg-danger">Publishing a website on GitHub pages.</li></a>
-              </ul>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <h2 class="panel-title">fifth</h2>
-            </div>
-              <div class="panel-body">
-                <ul>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <span style="color:blue;font-weight:bold"><li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li></span>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <a href="#" <li class="bg-warning">Publishing a website on GitHub pages.</li></a>
-              </ul>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <h2 class="panel-title">sixth</h2>
-            </div>
-              <div class="panel-body">
-                <ul>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <a href="#" <li class="bg-success">Publishing a website on GitHub pages.</li></a>
+                <li>#</li>
+                <li>#</li>
+                <span style="color:blue;font-weight:bold"><li>#</li></span>
+                <br>
+                <a href="https://github.com/tmemmerson/my-first-webpage.git" <li class="bg-warning">see more...</li></a>
               </ul>
         </div>
       </div>
@@ -126,53 +52,106 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">seventh</h2>
+          <h2 class="panel-title">Hello World</h2>
             </div>
               <div class="panel-body">
+                <em><h4>Concepts</h4></em>
                 <ul>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <a href="#" <li class="bg-danger">Publishing a website on GitHub pages.</li></a>
+                  <li>#</li>
+                  <li>#</li>
+                  <li>#</li>
+                  <br>
+                <a href="https://github.com/tmemmerson/hello-world.git" <li class="bg-success">see more...</li></a>
               </ul>
         </div>
       </div>
     </div>
+
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">eighth</h2>
+          <h2 class="panel-title">Cookie Recipe</h2>
             </div>
               <div class="panel-body">
+                <em><h4>Concepts</h4></em>
                 <ul>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <span style="color:blue;font-weight:bold"><li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li></span>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <a href="#" <li class="bg-warning">Publishing a website on GitHub pages.</li></a>
+                <li>Cloning and modifying Github repositories</li>
+                <li>Creation of new repository via terminal</li>
+                <span style="color:blue;font-weight:bold"><li>Pushing modified repo clones to remote</li></span>
+                <br>
+                <a href="https://github.com/tmemmerson/cookie-recipe.git" <li class="bg-warning">see more...</li></a>
               </ul>
         </div>
       </div>
     </div>
+
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">ninth</h2>
+          <h2 class="panel-title">Animal Shelter</h2>
             </div>
               <div class="panel-body">
+                <em><h4>Concepts</h4></em>
                 <ul>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <li>Lorem ipsum dolor sit amet, nisl eius eu ius, conceptam cum no.</li>
-                <a href="#" <li class="bg-success">Publishing a website on GitHub pages.</li></a>
+                <li>#</li>
+                <li>#</li>
+                <li>#</li>
+                <br>
+                <a href="https://github.com/tmemmerson/animal-shelter.git" <li class="bg-success">see more...</li></a>
+              </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Week in Review</h2>
+            </div>
+              <div class="panel-body">
+                <em><h4>Concepts</h4></em>
+                <ul>
+                <li>#</li>
+                <li>#</li>
+                <li>#</li>
+                <br>
+                <a href="https://github.com/tmemmerson/first-week-review.git" <li class="bg-danger">see more...</li></a>
+              </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Vacation Site</h2>
+            </div>
+              <div class="panel-body">
+                <em><h4>Concepts</h4></em>
+                <ul>
+                <li>#</li>
+                <li>#</li>
+                <span style="color:blue;font-weight:bold"><li>#</li></span>
+                <br>
+                <a href="https://github.com/tmemmerson/vacation-site.git" <li class="bg-warning">see more...</li></a>
+              </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Wikipedia Recreation & Reconstruction</h2>
+            </div>
+              <div class="panel-body">
+                <em><h4>Concepts</h4></em>
+                <ul>
+                <li>#</li>
+                <li>#</li>
+                <li>#</li>
+                <br>
+                <a href="https://github.com/tmemmerson/wikipedia-recreation.git" <li class="bg-success">see more...</li></a>
               </ul>
         </div>
       </div>
