Add descriptive text to portfolio blocks listing concepts covered in each project.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
               <div class="panel-body">
                 <em><h4>Concepts</h4></em>
                 <ul>
-                <li>#</li>
-                <li>#</li>
-                <li>#</li>
+                <li>Creation of branching, including multiple branches for styling variants</li>
+                <li>Subsequent deletion and merging of branches to a master branch</li>
                 <br>
                 <a href="https://github.com/tmemmerson/branching-test-project.git" <li class="bg-danger">see more...</li></a>
               </ul>
@@ -39,9 +38,9 @@
               <div class="panel-body">
                 <em><h4>Concepts</h4></em>
                 <ul>
-                <li>#</li>
-                <li>#</li>
-                <span style="color:blue;font-weight:bold"><li>#</li></span>
+                <li>Introduction to page creation</li>
+                <li>Ordered and unordered list elements</li>
+                <span style="color:blue;font-weight:bold"><li>Making regular commits</li></span>
                 <br>
                 <a href="https://github.com/tmemmerson/my-first-webpage.git" <li class="bg-warning">see more...</li></a>
               </ul>
@@ -52,16 +51,16 @@
     <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Hello World</h2>
+          <h2 class="panel-title">Favorite Places</h2>
             </div>
               <div class="panel-body">
                 <em><h4>Concepts</h4></em>
                 <ul>
-                  <li>#</li>
-                  <li>#</li>
-                  <li>#</li>
+                  <li>This exercise is intended to introduce the cursory concepts of HTML & CSS.</li>
+                  <li>Use of a terminal to interact with and modify repositories.</li>
+                  <li>Using Visual Studio code to</li>
                   <br>
-                <a href="https://github.com/tmemmerson/hello-world.git" <li class="bg-success">see more...</li></a>
+                <a href="https://github.com/tmemmerson/my-first-webpage.git" <li class="bg-success">see more...</li></a>
               </ul>
         </div>
       </div>
@@ -77,7 +76,7 @@
                 <ul>
                 <li>Cloning and modifying Github repositories</li>
                 <li>Creation of new repository via terminal</li>
-                <span style="color:blue;font-weight:bold"><li>Pushing modified repo clones to remote</li></span>
+                <span style="font-weight:bold"><li>Pushing modified repo clones to remote</li></span>
                 <br>
                 <a href="https://github.com/tmemmerson/cookie-recipe.git" <li class="bg-warning">see more...</li></a>
               </ul>
@@ -93,9 +92,8 @@
               <div class="panel-body">
                 <em><h4>Concepts</h4></em>
                 <ul>
-                <li>#</li>
-                <li>#</li>
-                <li>#</li>
+                <li>Use of ordered and unordered list elements</li>
+                <li>Combining both HTML and CSS via VSC to create an adoption page for cats and dogs at a shelter</li>
                 <br>
                 <a href="https://github.com/tmemmerson/animal-shelter.git" <li class="bg-success">see more...</li></a>
               </ul>
@@ -111,9 +109,8 @@
               <div class="panel-body">
                 <em><h4>Concepts</h4></em>
                 <ul>
-                <li>#</li>
-                <li>#</li>
-                <li>#</li>
+                <li>Combining the use of concepts learned during the first week at Epicodus</li>
+                <li>Concepts include Command line, Git commands, Terminal and VS Code use, Github interfacing, HTML, CSS, and Bootstrap</li>
                 <br>
                 <a href="https://github.com/tmemmerson/first-week-review.git" <li class="bg-danger">see more...</li></a>
               </ul>
@@ -129,9 +126,9 @@
               <div class="panel-body">
                 <em><h4>Concepts</h4></em>
                 <ul>
-                <li>#</li>
-                <li>#</li>
-                <span style="color:blue;font-weight:bold"><li>#</li></span>
+                <li>In-line elements</li>
+                <li>Block element manipulation</li>
+                <span style="color:blue;font-weight:bold"><li>Integration of photo elements</li></span>
                 <br>
                 <a href="https://github.com/tmemmerson/vacation-site.git" <li class="bg-warning">see more...</li></a>
               </ul>
@@ -147,9 +144,9 @@
               <div class="panel-body">
                 <em><h4>Concepts</h4></em>
                 <ul>
-                <li>#</li>
-                <li>#</li>
-                <li>#</li>
+                <li>Navigation and installation and use of Bootstrap.css</li>
+                <li>Implementation of Bootstrap elements</li>
+                <li>Use of Bootstrap in conjunction with self-written CSS styles sheet</li>
                 <br>
                 <a href="https://github.com/tmemmerson/wikipedia-recreation.git" <li class="bg-success">see more...</li></a>
               </ul>
