--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Tristan Emmerson Programming Portfolio</title>
   </head>
   <body>
-    <h1>Tristan Emmerson's Programming Portfolio</h1>
-    <h2>heading 2 spot</h2>
-    <p>Lorem ipsum dolor sit amet, eu ius agam tota graeco. Usu an lobortis <strong><a href="#">Alterum ius Gracecco</a></strong> facilisis, at quot ferri graeco nam. Affert <strong>malorum voltropit at quot cu eum </strong>volutpat referrentur vim eu, odio nobis molestie cu eum, malorum alterum saperet ad qui. Nullam expetendis in sit, in mel aliquando cotidieque, et virtute disputando intellegebat eum. Lorem ipsum dolor sit amet, partem omnesque voluptatum id his. Possit nemore assueverit eum ei, sit congue eripuit id, ei cum appareat elaboraret. Quidam dignissim et quo, epicurei neglegentur est et. Porro zril antiopam vel cu, vel at etiam regione corrumpit.</p>
+    <h1><strong>Tristan Emmerson</strong></h1>
+    <h2><strong>About Me</strong></h2>
+    <p>Lorem ipsum dolor sit amet, eu ius agam tota graeco. Usu an lobortis <strong><a href="#">Alterum ius Gracecco</a></strong> facilisis, at quot ferri graeco nam. Affert <strong>malorum voltropit at quot cu eum </strong>volutpat referrentur vim eu, odio nobis molestie cu eum, malorum alterum saperet ad qui. Nullam expetendis in sit, in mel aliquando cotidieque, et virtute disputando intellegebat eum. Lorem ipsum dolor sit amet, partem omnesque voluptatum id his. Possit nemore assueverit eum ei, sit congue eripuit id, ei cum appareat elaboraret. Quidam dignissim et quo, epicurei neglegentur est et. Porro zril antiopam vel cu, vel at etiam regione corrumpit.quot ferri graeco nam. Affert <strong>malorum voltropit at quot cu eum </strong>volutpat referrentur vim eu, odio nobis molestie cu eum, malorum alterum saperet ad qui. Nullam expetendis in sit, in mel aliquando cotidieque, et virtute disputando intellegebat eum. Lorem ipsum dolor sit amet, partem omnesque voluptatum id his. Possit nemore assueverit eum ei, sit congue eripuit id, ei cum appareat elaboraret. Quidam dignissim et quo, epicurei neglegentur est et. Porro zril antiopam vel cu, vel at etiam regione</p>
 
-    <h2><strong>Epicodus</strong> Portfolio Projects</h2>
+    <h2>Epicodus Portfolio Projects</h2>
     <br>
     <div class="col-md-4">
       <div class="panel panel-info">
@@ -110,7 +110,7 @@
                 <em><h4>Concepts</h4></em>
                 <ul>
                 <li>Combining the use of concepts learned during the first week at Epicodus</li>
-                <li>Concepts include Command line, Git commands, Terminal and VS Code use, Github interfacing, HTML, CSS, and Bootstrap</li>
+                <li>Concepts include Command line, Git commands, Terminal and VS Code Github interfacing, HTML, CSS, and Bootstrap</li>
                 <br>
                 <a href="https://github.com/tmemmerson/first-week-review.git" <li class="bg-danger">see more...</li></a>
               </ul>
