Add bio pic and further text styling from Google Fonts.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@407&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&family=Oswald:wght@407&family=Pacifico&family=Roboto&display=swap" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Tristan Emmerson Programming Portfolio</title>
   </head>
   <body>
     <h1><strong>Tristan Emmerson</strong></h1>
+    <br>
+    <img src="img/bio-pic.jpg" class="img-rounded" alt="Cinque Terre" height=375px>
     <h2><strong>About Me</strong></h2>
-    <p>Lorem ipsum dolor sit amet, eu ius agam tota graeco. Usu an lobortis <strong><a href="#">Alterum ius Gracecco</a></strong> facilisis, at quot ferri graeco nam. Affert <strong>malorum voltropit at quot cu eum </strong>volutpat referrentur vim eu, odio nobis molestie cu eum, malorum alterum saperet ad qui. Nullam expetendis in sit, in mel aliquando cotidieque, et virtute disputando intellegebat eum. Lorem ipsum dolor sit amet, partem omnesque voluptatum id his. Possit nemore assueverit eum ei, sit congue eripuit id, ei cum appareat elaboraret. Quidam dignissim et quo, epicurei neglegentur est et. Porro zril antiopam vel cu, vel at etiam regione corrumpit.quot ferri graeco nam. Affert <strong>malorum voltropit at quot cu eum </strong>volutpat referrentur vim eu, odio nobis molestie cu eum, malorum alterum saperet ad qui. Nullam expetendis in sit, in mel aliquando cotidieque, et virtute disputando intellegebat eum. Lorem ipsum dolor sit amet, partem omnesque voluptatum id his. Possit nemore assueverit eum ei, sit congue eripuit id, ei cum appareat elaboraret. Quidam dignissim et quo, epicurei neglegentur est et. Porro zril antiopam vel cu, vel at etiam regione</p>
+    <blockquote><p>Lorem ipsum dolor sit amet, eu ius agam tota graeco. Usu an lobortis <strong><a href="#">Alterum ius Gracecco</a></strong> facilisis, at quot ferri graeco nam. Affert <strong>malorum voltropit at quot cu eum </strong>volutpat referrentur vim eu, odio nobis molestie cu eum, malorum alterum saperet ad qui. Nullam expetendis in sit, in mel aliquando cotidieque, et virtute disputando intellegebat eum. Lorem ipsum dolor sit amet, partem omnesque voluptatum id his. Possit nemore assueverit eum ei, sit congue eripuit id, ei cum appareat elaboraret. Quidam dignissim et quo, epicurei neglegentur est et. Porro zril antiopam vel cu, vel at etiam regione corrumpit.quot ferri graeco nam. Affert <strong>malorum voltropit at quot cu eum </strong>volutpat referrentur vim eu, odio nobis molestie cu eum, malorum alterum saperet ad qui. Nullam expetendis in sit, in mel aliquando cotidieque, et virtute disputando intellegebat eum. Lorem ipsum dolor sit amet, partem omnesque voluptatum id his. Possit nemore assueverit eum ei, sit congue eripuit id, ei cum appareat elaboraret. Quidam dignissim et quo, epicurei neglegentur est et. Porro zril antiopam vel cu, vel at etiam regione</p></blockquote>
+    <br>
+    <h2>Background</h2>
+    <blockquote><div id="container">fgfgggggggggfgfgfgfgfggggggggggggggggg g g g g g gfgfgfgfgfgfgfgfgggggggggggggggggggggggggg g g g g g gfgfgfgfgfgfgfgfgggggggggggggggggggggggggg g g g g g gfgfgfgfgfgfgfgfgggggggggggggggggggggggggg g g g g g g</div></blockquote>
 
     <h2>Epicodus Portfolio Projects</h2>
     <br>
@@ -155,10 +160,10 @@
     </div>
 
       <div class="col-md-4">
-        <h2>Partnering</h2>
+        <h2>Favorite Quote</h2>
         <blockquote class="bg-info">
-          <p>"Lorem nisl en cuitl nopoo ditit eius"</p>
-          <footer>quote origin</footer>
+          <p>"Just be true to yourself. If it lands you in hell, well at least now you know."</p>
+          <footer>M. Skiba</footer>
         </blockquote>
       </div>
     </div>
