Add final About Me content.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <br>
     <img src="img/bio-pic.jpg" class="img-rounded" alt="Cinque Terre" height=375px>
     <h2><strong>About Me</strong></h2>
-    <blockquote><p>Lorem ipsum dolor sit amet, eu ius agam tota graeco. Usu an lobortis <strong><a href="#">Alterum ius Gracecco</a></strong> facilisis, at quot ferri graeco nam. Affert <strong>malorum voltropit at quot cu eum </strong>volutpat referrentur vim eu, odio nobis molestie cu eum, malorum alterum saperet ad qui. Nullam expetendis in sit, in mel aliquando cotidieque, et virtute disputando intellegebat eum. Lorem ipsum dolor sit amet, partem omnesque voluptatum id his. Possit nemore assueverit eum ei, sit congue eripuit id, ei cum appareat elaboraret. Quidam dignissim et quo, epicurei neglegentur est et. Porro zril antiopam vel cu, vel at etiam regione corrumpit.quot ferri graeco nam. Affert <strong>malorum voltropit at quot cu eum </strong>volutpat referrentur vim eu, odio nobis molestie cu eum, malorum alterum saperet ad qui. Nullam expetendis in sit, in mel aliquando cotidieque, et virtute disputando intellegebat eum. Lorem ipsum dolor sit amet, partem omnesque voluptatum id his. Possit nemore assueverit eum ei, sit congue eripuit id, ei cum appareat elaboraret. Quidam dignissim et quo, epicurei neglegentur est et. Porro zril antiopam vel cu, vel at etiam regione</p></blockquote>
+    <blockquote><p>For the last decade, Tristan has owned and operated Stickerslug Incorporated. Before becoming a business owner, Tristan went to school for business administration at the University of Oregon. He have spent the better part of a decade learning the ins and outs of business ownership. 
+      Tristan Emmerson resides in Portland, Oregon with his wife and 2 young boys. Tristan has been with his wife since they were college sweet-hearts in 2006. His two young boys, Cohen & Avery are 4 and 2, respectively. It is quite possible, his wife is a superhero. Results for the superhero test have not yet been received.
+      </p></blockquote>
     <br>
     <h2>Background</h2>
     <blockquote><div id="container">fgfgggggggggfgfgfgfgfggggggggggggggggg g g g g g gfgfgfgfgfgfgfgfgggggggggggggggggggggggggg g g g g g gfgfgfgfgfgfgfgfgggggggggggggggggggggggggg g g g g g gfgfgfgfgfgfgfgfgggggggggggggggggggggggggg g g g g g g</div></blockquote>
-
+    <br>
     <h2>Epicodus Portfolio Projects</h2>
     <br>
     <div class="col-md-4">
