--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
     <br>
     <img src="img/bio-pic.jpg" class="img-rounded" alt="Cinque Terre" height=375px>
     <h2><strong>About Me</strong></h2>
-    <blockquote><p>For the last decade, Tristan has owned and operated Stickerslug Incorporated. Before becoming a business owner, Tristan went to school for business administration at the University of Oregon. He have spent the better part of a decade learning the ins and outs of business ownership. 
-      Tristan Emmerson resides in Portland, Oregon with his wife and 2 young boys. Tristan has been with his wife since they were college sweet-hearts in 2006. His two young boys, Cohen & Avery are 4 and 2, respectively. It is quite possible, his wife is a superhero. Results for the superhero test have not yet been received.
-      </p></blockquote>
+    <blockquote>
+      <div id="container">
+      <p>For the last decade, Tristan has owned and operated Stickerslug Incorporated. Before becoming a business owner, Tristan went to school for business administration at the University of Oregon. He have spent the better part of a decade learning the ins and outs of business ownership.Tristan Emmerson resides in Portland, Oregon with his wife and 2 young boys. Tristan has been with his wife since they were college sweet-hearts in 2006. His two young boys, Cohen & Avery are 4 and 2, respectively. It is quite possible, his wife is a superhero. Results for the superhero test have not yet been received.</p>
+      </div>
+    </blockquote>
     <br>
+    
     <h2>Background</h2>
-    <blockquote><div id="container">fgfgggggggggfgfgfgfgfggggggggggggggggg g g g g g gfgfgfgfgfgfgfgfgggggggggggggggggggggggggg g g g g g gfgfgfgfgfgfgfgfgggggggggggggggggggggggggg g g g g g gfgfgfgfgfgfgfgfgggggggggggggggggggggggggg g g g g g g</div></blockquote>
+    <blockquote>
+      <div id="container">
+      <p>Tristan credits his growth in time management skills as well as a deep understanding of ecommerce to his time running Stickerslug. One of Tristan’s greatest accomplishments in business has been growing Stickerslug from a mere two-hundred and fifty dollar investment, into an online retailer at the top of his respective market, generating over half a million dollars in annual revenue. A self-taught entrepreneur, Tristan rebuffed his internal desire to self-teach all elements of business, and shifted into a student role once again and entered a programming course at Epicodus in Portland. While he has  learned a lot through the years running a successful business, he does not like to define himself by this. Rather, he would tout his ability to challenge himself and his innate confidence in tackling any task he is presented with. He believes skills can always be taught but a hard-working drive and desire must be innate to the individual.</p>
+      </div>
+    </blockquote>
     <br>
+    
     <h2>Epicodus Portfolio Projects</h2>
     <br>
     <div class="col-md-4">
