--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&family=Oswald:wght@407&family=Pacifico&family=Roboto&display=swap" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <title>Tristan Emmerson Programming Portfolio</title>
   </head>
   <body>
